--- a/html/public/assets/css/App.css
+++ b/html/public/assets/css/App.css
@@ -27,11 +27,17 @@ nav{
     margin: 33px  24px 33px auto;
 }
 .nav_contents{
+    display: block;
     font-size: 24px;
     margin: 0 0 0 36px;
     color: #3560f6;
     font-weight: bold;
     border: none;
+}
+
+a{
+    text-decoration: none;
+    color: #3560f6;
 }
 
 
