--- a/html/public/assets/css/App.css
+++ b/html/public/assets/css/App.css
@@ -79,6 +79,40 @@ a{
     border-radius: 5px;
 }
 
+.Card_img{
+    width: 100%;
+    height: 50%;
+    margin: 0 auto 5px auto;
+}
+.Card img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px  5px 0 0;
+}
+
+.Card_ShopName{
+    font-size: 24px;
+    margin: 0 auto 5px 15px;
+}
+
+.Tags{
+    font-size: 12px;
+    margin: 0 auto 5px 15px;
+}
+.Buttons{
+    margin: 0 auto 5px 15px;
+}
+.Buttons button{
+    display: block;
+    font-size: 12px;
+    width: 100px;
+    border:none;
+    background-color:  #3560f6;
+    color: #fff;
+    border-radius: 5px;
+}
+
 .layout__center {
     display: flex;
     align-items: center;
