--- a/html/public/assets/css/Mypage.css
+++ b/html/public/assets/css/Mypage.css
@@ -3,9 +3,12 @@
     font-size: 32px;
     margin: 0 auto 20px auto;
 }
-.Card{
+.Reserve_Card{
     width: 100%;
+    height: 200px;
     margin: 0 auto 20px auto;
+    border-radius: 5px  5px 0 0;
+    box-shadow:2px 2px 5px;
     background-color:  #3560f6
 }
 
@@ -13,6 +16,15 @@
     margin: 10px auto auto 10px;
     font-size: 24px;
     color: white;
+}
+
+.Card{
+    width: 45%;
+    height: 200px;
+    margin: 0 auto 20px auto;
+    border-radius: 5px  5px 0 0;
+    box-shadow:2px 2px 5px;
+
 }
 
 
@@ -34,7 +46,6 @@
 .Reserve__remind td{
     color: white;
 }
-
 
 .Favorites{
     width:60%;
