--- a/html/public/assets/css/Mypage.css
+++ b/html/public/assets/css/Mypage.css
@@ -26,6 +26,10 @@
     box-shadow:2px 2px 5px;
 
 }
+.Titles{
+    width: 90%;
+    margin: 0 auto 20px auto;
+}
 
 
 .Contents{
@@ -37,8 +41,23 @@
 .Reserves__title{
     font-weight: bold;
     font-size: 24px;
-    margin: 0 auto 20px auto;
 }
+.Reserve_delete{
+    margin: auto 20px auto auto;
+}
+.Reserve_delete button{
+    display: block;
+    width: 36px;
+    height: 36px;
+    font-size: 24px;
+    background-color:  #3560f6;
+    color: #fff;
+    border: solid 2px;
+    border-radius: 24px;
+    border-color: #fff;
+
+}
+
 .Reserve__remind{
     padding: 10px;
 }
@@ -54,4 +73,13 @@
 .Favorites__title{
     font-weight: bold;
     font-size: 24px;
+}
+.Buttons button{
+    display: block;
+    font-size: 12px;
+    width: 100px;
+    border:none;
+    background-color:  #3560f6;
+    color: #fff;
+    border-radius: 5px;
 }
