--- a/html/public/assets/css/Mypage.css
+++ b/html/public/assets/css/Mypage.css
@@ -74,7 +74,18 @@
     font-weight: bold;
     font-size: 24px;
 }
-.Buttons button{
+.Buttons{
+    margin: 0 auto 5px 15px;
+}
+.Cards{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: auto;
+}
+
+.detail{
     display: block;
     font-size: 12px;
     width: 100px;
@@ -82,4 +93,16 @@
     background-color:  #3560f6;
     color: #fff;
     border-radius: 5px;
+}
+
+.favorite{
+    color: #E2E2E2;
+    font-size: 24px;
+    margin: 0 10px 5px auto;
+    border:none;
+    background-color:  white;
+}
+
+.CRed{
+    color: red;
 }
