--- a/html/public/assets/css/Reserve.css
+++ b/html/public/assets/css/Reserve.css
@@ -8,7 +8,6 @@
 .Link_And_Name{
     margin: 0 auto 20px auto;
     justify-content: start;
-    
 }
 .Shop__detail_link{
     width: 50px;
@@ -101,5 +100,22 @@
     border: solid 2px;
     border-radius: 24px;
     border-color: #fff;
+}
+.Reserves {
+    margin: 20px auto;
+    width: 90%;
+}
+.Reserves table{
+    background-color: #fff;
+    border-collapse:collapse;
+    box-shadow:2px 2px 5px;
+    width: 100%;
+}
+.Reserves tr{
+    border-bottom:1px solid black;
+}
 
+.Reserves th{
+
+    text-align:left;
 }
