--- a/html/public/assets/css/Mypage.css
+++ b/html/public/assets/css/Mypage.css
@@ -5,7 +5,7 @@
 }
 .Reserve_Card{
     width: 100%;
-    height: 200px;
+    height: 400px;
     margin: 0 auto 20px auto;
     border-radius: 5px  5px 0 0;
     box-shadow:2px 2px 5px;
@@ -39,9 +39,7 @@
 .Reserves{
     width: 30%;
 }
-.Reserve_Card{
-    height: 300px
-}
+
 .Reserve_fix{
     margin: auto auto auto 20px;
 }
@@ -54,6 +52,15 @@
     background-color:  #3560f6;
     color: #fff;
     border: none;
+}
+.payment{
+    display: block;
+    font-size: 12px;
+    width: 100px;
+    border:none;
+    background-color:  white;
+    color: #fff;
+    border-radius: 5px;
 }
 
 
@@ -148,6 +155,6 @@
     border-radius: 5px;
     padding: 10px;
 
-    margin:20px 20px 120px 20px;
+    margin:20px 20px 20px 20px;
 }
 
